--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ dependencies = [
     "transformers (>=4.52.0,<5.0.0)",
     "flask (>=3.1.1,<4.0.0)"
 ]
+[tool.poetry]
+package-mode = false
 
 
 [build-system]
